k8s/tgp/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tgp-db
  namespace: homelab
spec:
  serviceName: tgp-db
  replicas: 1
  selector:
    matchLabels:
      app: tgp-db
  template:
    metadata:
      labels:
        app: tgp-db
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        resources:
          requests:
            shm-size: 128Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tgp-pg-data
---
apiVersion: v1
kind: Service
metadata:
  name: tgp-db
  namespace: homelab
spec:
  selector:
    app: tgp-db
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
